# smt-switch

./: CMakeLists.txt  README.md
pbv/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  CmakeListDynamic.txt  Dockerfile  Makefile  artif  artifact_test.sh  cmake_install.cmake  cmake_uninstall.cmake  cvc5-reinstall.sh  init.sh  install.sh  pbvsolver.cpp  reinstall.sh
pbv/artifact/: AddSub_1040_values_0.smt2  AddSub_1043_values_0.smt2  AddSub_1176_values_0.smt2  AddSub_1202_values_0.smt2  AddSub_1295_values_0.smt2  AddSub_1539-2_values_0.smt2  AddSub_1574_values_0.smt2  AddSub_1604_values_0.smt2  AddSub_1614_values_0.smt2  AddSub_1624_values_0.smt2  AndOrXor_1006_values_0.smt2  AndOrXor_1007_values_0.smt2  AndOrXor_1012_values_0.smt2  AndOrXor_1247_values_0.smt2  AndOrXor_1288_values_0.smt2  AndOrXor_1294_values_0.smt2  AndOrXor_135_values_0.smt2  AndOrXor_144_values_0.smt2  AndOrXor_151_values_0.smt2  AndOrXor_1683-1_values_0.smt2  AndOrXor_1704_values_0.smt2  AndOrXor_1705_values_0.smt2  AndOrXor_1827_values_0.smt2  AndOrXor_1844_values_0.smt2  AndOrXor_1849_values_0.smt2  AndOrXor_1864_values_0.smt2  AndOrXor_1870_values_0.smt2  AndOrXor_1879_values_0.smt2  AndOrXor_1885_values_0.smt2  AndOrXor_1895_values_0.smt2  AndOrXor_1899_values_0.smt2  AndOrXor_1900_values_0.smt2  AndOrXor_210_values_0.smt2  AndOrXor_2113_values_0.smt2  AndOrXor_2118_values_0.smt2  AndOrXor_2123_values_0.smt2  AndOrXor_2160_values_0.smt2  AndOrXor_2243_values_0.smt2  AndOrXor_2264_values_0.smt2  AndOrXor_2265_values_0.smt2  (+44 more)
pbv/benchmarks/: check_bvsge_bvadd_kbit.smt2  partial.smt2  partial_not_full.smt2  repeat.smt2  rotate.smt2  test-bvadd-unsat2.smt2  test-bvand2.smt2  test-bvand3.smt2  test-k0.smt2  test-k1.smt2  test-maxint-unknown.smt2  test-pbvand-sat2.smt2  test-pbvand-sat3.smt2  test-pbvlshr2-unsat.smt2  test-pbvneg2-sat.smt2  test-pbvor-sat.smt2  test-pbvsgt-sat2.smt2  test-pbvsle-unsat2.smt2  test-pbvslt-sat2.smt2  test-pbvslt-unsat2.smt2  test-pbvudiv-unsat2.smt2  ‏‏test-k1.smt2
pbv/cmake/: FindGMP.cmake
pbv/qf_pbv/: test-bvand.smt2  test-bvand2.smt2  test-bvconcat.smt2  test-k9.smt2  test-or.smt2  test-pbvand.smt2  test-xor.smt2
pbv/scripts/: check_simplify.sh  (+7 more)
(+34878 files in other folders)
